# msgpu_vgalib

./: .clang-format  CMakeLists.txt  README.md  packages.json  test.cpp
demos/: CMakeLists.txt  cube.c  cube.cpp  demo  load_shaders.cpp  load_shaders.hpp  test_shader.c  test_shader.cpp  triangle.cpp  vertex_shader.cpp
demos/colored_triangle/: CMakeLists.txt  colored_triangle.cpp  fragment_shader.glsl  vertex_shader.glsl
demos/cube/: CMakeLists.txt  cube.cpp  fragment_shader.cpp  fragment_shader.glsl  vertex_shader.cpp  vertex_shader.glsl
demos/tutorial/: CMakeLists.txt  fragment_shader.cpp  global.cpp  square.cpp   test.h  triangle.cpp  vertex_shader.cpp
include/: gl_shader.h  vga.h  vgagl.h
include/libgl/GL/: gl.h  glew.h  glu.h  glut.h
include/libgl/GLFW/: glfw3.h
interface/: CMakeLists.txt  messages
interface/messages/: change_mode.hpp  header.hpp  info_req.hpp  info_resp.hpp  messages.hpp  mode.hpp  write_text.hpp
source/: CMakeLists.txt  vga.cpp
source/GL/: CMakeLists.txt  gl.cpp  glew.cpp  glu.cpp  glut.cpp  glut.cpp.orig  io.hpp  io.hpp.orig
source/GLFW/: CMakeLists.txt  glfw_io.cpp  glfw_window.cpp
