# This file is part of msgpu_vgalib project. This is simple OS for embedded development devices.
# Copyright (C) 2021 Mateusz Stadnik
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

add_library(msgpu_libgl)

target_sources(msgpu_libgl 
    PUBLIC 
        ${PROJECT_SOURCE_DIR}/include/libgl/GL/gl.h
        ${PROJECT_SOURCE_DIR}/include/libgl/GL/glu.h
        ${PROJECT_SOURCE_DIR}/include/libgl/GL/glut.h
    PRIVATE 
        ${CMAKE_CURRENT_SOURCE_DIR}/gl.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glu.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glut.cpp
)

target_include_directories(msgpu_libgl BEFORE 
    PUBLIC 
        ${PROJECT_SOURCE_DIR}/include/libgl
)

target_link_libraries(msgpu_libgl 
    PRIVATE 
        msgpu_messages
)
